picluster/ingress/rancher/ingress-route.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: rancher-ingress-https
  namespace: cattle-system
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`rancher.wouterstemgee.be`)
      kind: Rule
      services:
        - name: rancher
          port: 80
  tls:
    secretName: rancher-wouterstemgee-be-cert

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: rancher-ingress-http
  namespace: cattle-system
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`rancher.wouterstemgee.be`)
      middlewares:
        - name: https-only
      kind: Rule
      services:
        - name: rancher
          port: 80

---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: https-only
  namespace: cattle-system
spec:
  redirectScheme:
    scheme: https
    permanent: true
